# triplexator

./: BuildingTriplexatorOnMacOSX.md  CMakeLists.txt  ChangeLog.txt  INFO.txt  LICENCE  Makefile  Makefile.osx  ProjectHome.md  README  README.txt
demos/: P00374.fasta  double-stranded.fasta  single-stranded.fasta  smoketest_triplexator.sh  tfo_search.sh  triplex_search.sh  tts_search.sh
demos/reference/: test_default.tfo  test_default.triplex  test_default.tts  test_duplicates_filtering.tts  test_duplicates_filtering_permissive.tfo  test_duplicates_filtering_strict.tfo  test_guanine50.tfo  test_guanine50relaxed.tfo  test_low_complexity_region_filtering.tts  test_minimum_size.tfo  test_minimum_size.triplex  test_minimum_size.tts  test_perfect_M.tfo  test_perfect_M.triplex  test_perfect_R.tfo  test_perfect_R.triplex  test_perfect_Y.tfo  test_perfect_Y.triplex
src/: CMakeLists.txt  config.h  config.h.in  find_index_qgrams.h  gardener.h  helper.h  output.h  triplex.h  triplex_alphabet.h  triplex_functors.h  triplex_pattern.h  triplexator.cpp  triplexator.h
src/seqan/align/: align_generated_forwards.h
src/seqan/arg_parse/: arg_parse_generated_forwards.h
src/seqan/basic/: basic_generated_forwards.h
src/seqan/chaining/: chaining_generated_forwards.h
src/seqan/consensus/: consensus_generated_forwards.h
src/seqan/file/: file_generated_forwards.h
src/seqan/find/: find_generated_forwards.h
src/seqan/graph_algorithms/: graph_algorithms_generated_forwards.h
src/seqan/graph_align/: graph_align_generated_forwards.h
src/seqan/graph_msa/: graph_msa_generated_forwards.h
src/seqan/graph_types/: graph_types_generated_forwards.h
src/seqan/index/: index_generated_forwards.h
src/seqan/map/: map_generated_forwards.h
src/seqan/misc/: misc_generated_forwards.h
src/seqan/modifier/: modifier_generated_forwards.h
src/seqan/parallel/: parallel_generated_forwards.h
src/seqan/pipe/: pipe_generated_forwards.h
src/seqan/random/: random_generated_forwards.h
src/seqan/refinement/: refinement_generated_forwards.h
src/seqan/score/: score_generated_forwards.h
src/seqan/seeds/: seeds_generated_forwards.h
src/seqan/seeds2/: seeds2_generated_forwards.h
src/seqan/sequence/: sequence_generated_forwards.h
src/seqan/sequence_journaled/: sequence_journaled_generated_forwards.h
src/seqan/store/: store_generated_forwards.h
src/seqan/stream/: stream_generated_forwards.h
triplex_inspector/: ChangeLog.txt  FAQs.txt  create_dnase_data.sh  run_inspector.sh
triplex_inspector/includes/css/: flotr2.css  inspector.css  jquery-ui.css  jquery.dataTables.css
triplex_inspector/includes/js/: CustomHashTable.js  circos.js  inspector.js  inspector_detail.js  inspector_report.js  jquery.dataTables.selectFilter.js
triplex_inspector/scripts/: _annotationTPX.py  _extract_TTS.py  _make_circos_data.py  _make_html.py  _make_plots.py  _map_to_original_data.py  _mergeExons.py  _parseGtf.py  _removeOverlapWithPrimaryTarget.py  _submatches.py  collectOutput.py  convertTTStoGenomicLoci.py  translateTTStoTFO.py  wig2bedGraph.py
triplex_inspector/test/: README.txt  run_test.sh
